[package]
name = "chownr"
version = "3.0.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Recursive file ownership changer. Like chown -r."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkat/chownr-rs"
homepage = "https://github.com/zkat/chownr-rs"
edition = "2018"

[dependencies]
nix = { version = "0.28.0", features = ["user", "fs"] }
anyhow = "1.0.82"
